2008-11-21  Christophe Fergeau <teuf@gnome.org>

	Bug 561212 – GFileReadMoreCallback API doc refers to non-existant function

	* gio/giotypes.h: fix name of function referred to in
	GFileReadMoreCallback API documentation

2008-11-21  Matthias Clasen <mclasen@redhat.com>

	* configure.in: Bump gtk-doc dependency to 1.11 for
	nicer index-generation.

2008-11-14  Matthias Clasen <mclasen@redhat.com>

	* NEWS: Updates

2008-11-04  Christian Dywan  <christian@imendio.com>

	Bug 558672 – NULL key lookup using g_hash_table_lookup_extended()

	* glib/ghash.c:
	Clarify g_hash_table_lookup_extended

2008-11-02  Tor Lillqvist  <tml@novell.com>

	* configure.in: Expand also build/win32/vs9/Makefile.

2008-10-31  Christian Dywan  <christian@imendio.com>

	Bug 558513 – g_warn_if_fail FIXME in gtestutils

	* glib/gtestutils.c (g_test_log_send):
	Turn g_assert into g_warn_if_fail as advised

2008-10-31  Grahame Bowland  <grahame@angrygoats.net>

	Bug 558185 – 'parent' variable in g_local_file_get_child_for_display_name() 
	hits g_object_unref(NULL) assertion

	* gio/glocalfile.c: 
	- remove unused variable. Patch by Matt Johnston <matt@ucc.asn.au>

2008-10-29 16:11:14  Tim Janik  <timj@gtk.org>

	* glib/gmacros.h: added G_PASTE() and G_STATIC_ASSERT(), based on
	patches by Christian Persch and Christian Dywan. Fixes:
	Bug 558381 - Add support for compile time assertions

2008-10-27  Joseph Pingenot  <gnomesvn@digitasaru.net>

	* glib/ghash.c: changed "#GHashTableIterator" to "#GHashTableIter"
	in the documentation-comments above g_hash_table_foreach_remove()
	and g_hash_table_foreach_steal() to correctly name and link to
	GHashTableIter.  This affects the GNOME documentation website
	as well, so further steps are likely necessary beyond this subproject..

2008-10-23 Matthias Clasen <mclasen@redhat.com>

	Bug 557210 – g_compute_checksum_for_* asserts with less than 2 bytes

	* glib/gchecksum.c (g_compute_checksum_for_data): Accept 
	lengths < 2. Patch by Tommi Komulainen
